--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.DenchickSlaziet"
         tools:targetApi="31">
         <activity
+            android:name=".SecActivity"
+            android:exported="true" />
+
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
@@ -24,5 +28,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
