--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.DenchickSlaziet"
         tools:targetApi="31">
         <activity
-            android:name=".SecActivity"
+            android:name=".SecondActivity"
             android:exported="true" />
 
         <activity
